[package]
name = "actolang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
either = "1.13.0"
indexmap = { version = "2.7.1", features = ["serde"] }
peg = "0.8.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
serdebug = "1.2.0"
thiserror = "2.0.11"
vec1 = { version = "1.12.1", features = ["serde"] }
